Fixed home alignment; No ID showing in view existing, css added; index save button fixed

--- a/SeatingChart/css/seatingChartnew.css
+++ b/SeatingChart/css/seatingChartnew.css
@@ -201,6 +201,12 @@ button.editBtn {
 	border-radius: 5px;
 }
 
+button.homeBtns {
+    width: 125px;
+    height: 100px;
+    vertical-align: top;
+}
+
 /*Needed to keep hidden items from displaying and messing up the CSS*/
 .aspNetHidden
 {
